feat: added pass change loggend user
